--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -44,10 +44,6 @@ bind = $sup, backslash, togglesplit, # dwindle
 bind = $sup, F, fullscreen, 1
 bind = $sup CTRL, F, fullscreen, 0
 bind = $sup, U, focusurgentorlast,
-# silent will move and hide window
-bind = $sup, Z, movetoworkspacesilent, special:pad
-# to exit special mode; move window to any window
-bind = $sup CTRL, Z, togglespecialworkspace, pad 
 
 # Select previous / next active desktop
 # bind = $sup, N, workspace, next ??
@@ -64,7 +60,9 @@ bind = $sup, J, movefocus, d
 bind = $sup, K, movefocus, u
 bind = $sup, L, movefocus, r
 
-bind = ALT, Tab, cyclenext,
+bind = ALT, Tab, cyclenext, visible tiled
+# cyclenext all
+bind = CTRL, Tab, cyclenext, visible floting
 
 # Tabbs/Groups
 bind = $sup, G, togglegroup
@@ -167,8 +165,8 @@ bind = $sup, F2, exec, /opt/idea-IU-212.5284.40/bin/idea.sh
 bind = $sup, F3, exec, eval $(printf "$TERM_LT $TERM_LT_RUN" "vifm" "vifm")
 bind = $sup, F4, exec, pcmanfm
 bind = $sup, F5, exec, keecli.sh
-bind = $sup, F6, exec, $scratchpad $(printf "$TERMINAL $TERM_RUN" "newsboat" "newsboat")
-bind = $sup, F7, exec, wezterm start --class 'note' --cwd ~/Documents/notebook -- nvim
+bind = $sup, F6, exec, $scratchpad -n newsboat $(printf "$TERMINAL $TERM_RUN" "newsboat" "newsboat")
+bind = $sup, F7, exec, wezterm start note --cwd ~/Documents/notebook -- nvim
 bind = $sup, F8, exec, task sync && $scratchpad task $(printf "$TERM_LT $TERM_LT_RUN" task taskwarrior-tui)
 bind = $sup, F9, exec, todo.lua add
 bind = $sup, F10, exec, mpv.lua -o ~/Videos
@@ -176,15 +174,22 @@ bind = $sup, F11, exec, sh -c $(ls ~/.bin | rofi -dmenu)
 bind = $sup, F12, exec, rofi -show power-menu -modi power-menu:$ROFI/power.sh
 
 # Scratchpad
-bind =  ,F12, exec, $scratchpad drop $(printf "$TERMINAL $TERM_RUN" "drop" "")
-bind = $sup SHIFT, U, exec, $scratchpad $(printf "$TERMINAL $TERM_RUN" "newsboat" "newsboat")
-bind = $sup CTRL, U, exec, task sync && $scratchpad $(printf "$TERM_LT $TERM_LT_RUN" "task" "taskwarrior-tui")
+# silent will move and hide window
+bind = $sup CTRL, D, exec, $scratchpad --menu
+bind = $sup, S, exec, $scratchpad --toggle
+bind = $sup CTRL, S, exec, $scratchpad --add
+# bind = $sup, Z, movetoworkspacesilent, special:pad
+# to exit special mode; move window to any window
+# bind = $sup CTRL, Z, togglespecialworkspace, pad 
+bind =  ,F12, exec, $scratchpad -n drop $(printf "$TERMINAL $TERM_RUN" "drop" "")
+bind = $sup SHIFT, U, exec, $scratchpad -n newsboat $(printf "$TERMINAL $TERM_RUN" "newsboat" "newsboat")
+bind = $sup CTRL, U, exec, task sync && $scratchpad -n task $(printf "$TERM_LT $TERM_LT_RUN" "task" "taskwarrior-tui")
 
 # ROFI
-bind = $sup, D, exec, $ROFI/windows.sh
+bind = $sup, D, exec, $scratchpad --switcher
 # bind = $sup, D, exec, rofi -modi window,calc,filebrowser -show window -show-icons -sidebar-mode -monitor -4
 bind = $sup SHIFT, D, exec, rofi -modi drun,keys,run -show drun -show-icons -sidebar-mode -monitor -4 -matching fuzzy
-bind = $sup CTRL, D, exec, $ROFI/mount-launcher.sh
+bind = $sup CTRL, M, exec, $ROFI/mount-launcher.sh
 # bind = $ALT, Space, exec, $ROFI/expander/expander.sh
 bind = $sup, V, exec, clip.sh
 # bind = $sup, V, exec, cliphist list | GDK_SCALE=2 rofi -dmenu | cliphist decode | wl-copy
@@ -235,7 +240,7 @@ bind = $sup CTRL, T, exec, search.lua --enpl -p
 windowrule = workspace 3, initialClass:^(vifm)$
 windowrule = workspace 9, initialClass:^(top)$
 windowrule = workspace 5 silent, initialClass:^(audio)$
-# or
+# or scratchpad
 # windowrule = workspace special:drop, class:^(drop)$
 
 windowrule = float,class:file-roller
