--- a/dot_config/navi/config.yaml
+++ b/dot_config/navi/config.yaml
@@ -3,15 +3,16 @@
 
 style:
   tag:
-    color: cyan # text color. possible values: https://bit.ly/3gloNNI
-    width_percentage: 26 # column width relative to the terminal window
-    min_width: 20 # minimum column width as number of characters
+    color: white # text color. possible values: https://bit.ly/3gloNNI
+    width_percentage: 10 # column width relative to the terminal window
+    min_width: 15 # minimum column width as number of characters
   comment:
     color: blue
-    width_percentage: 42
+    width_percentage: 45
     min_width: 45
   snippet:
-    color: white
+    width_percentage: 45
+    color: green
 
 finder:
   command: fzf # equivalent to the --finder option
@@ -29,8 +30,6 @@ client:
 # enables tealdeer support for navi --tldr
   tealdeer: true
 shell:
-  # Shell used for shell out. Possible values: bash, zsh, dash, ...
-  # For Windows, use `cmd.exe` instead.
   command: zsh
 
   # finder_command: bash # similar, but for fzf's internals
