yt: add channel list

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -200,9 +200,10 @@ bind = $sup SHIFT, R, exec, chat.clj action --action-list --output scratchpad
 bind = $sup CTRL, R, exec, chat.clj ask --list --output scratchpad
 
 # youtube
-bind = $sup, Y, exec, mpv.lua -o
-bind = $sup SHIFT, Y, exec, qu.clj menu
+bind = $sup, Y, exec, yt.clj playlist --channel
+bind = $sup SHIFT, Y, exec, mpv.lua -o
 bind = $sup CTRL, Y, exec, yt.clj search --input
+
 
 # internet
 bind = $sup, I, exec, rofi-buku
